--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiohttp==3.8.1
+aiohttp>=3.9.4
 aiosignal==1.2.0
 anyio==3.6.1
 appnope==0.1.3
@@ -52,7 +52,7 @@ ipython==8.5.0
 ipython-genutils==0.2.0
 ipywidgets==7.7.2
 jedi==0.18.1
-Jinja2==3.1.2
+Jinja2>=3.1.4
 joblib==1.2.0
 json5==0.9.10
 jsonschema==4.16.0
@@ -104,7 +104,6 @@ ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==9.0.0
 pycparser==2.21
-pydantic==1.9.2
 Pygments==2.13.0
 pyparsing==3.0.9
 pyrsistent==0.18.1
@@ -115,7 +114,7 @@ PyWavelets==1.4.1
 PyYAML==6.0
 pyzmq==24.0.0
 regex==2022.9.13
-requests==2.31.0
+requests>=2.32.0
 responses==0.18.0
 scikit-image==0.19.3
 scikit-learn==1.1.2
@@ -144,9 +143,8 @@ torchaudio==0.12.1
 torchkbnufft==1.4.0
 torchvision==0.13.1
 tornado==6.2
-tqdm==4.64.1
+tqdm>=4.66.3
 traitlets==5.4.0
-transformers==4.22.0
 typer==0.4.2
 typing_extensions==4.9.0
 urllib3==1.26.12
